[package]
name = "treestate-cli"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treestate = { path = ".." }

anyhow = "1.0"
clap = "2.33.1"
ignore = "0.4.17"
crossbeam-channel = "*"

[profile.release]
lto = true
